# multi_scale_head_gesture

./: README.md
airhandwriting_utils/: convert_mat_to_h5.py  create_training_dataset.py  matR_char_datatype.csv  matR_word_filetype.csv
conv_lstm/: batch_generator.py  conv_lstm.py  data_loader.py  one_vs_all_data_loader.py  one_vs_all_lstm.py  open_face_lstm.py  print_keras_model_weights.py  sliding_window_generator.py
conv_lstm/history/: keras_lstm_fc.hist.json  keras_lstm_fc.json
conv_lstm/torch/: classify.lua  classify_all_checkpoints.sh  classify_latent.lua  conv_lstm_train.lua  init.lua  label_correction_visualize.ipynb  rnn_train.lua  torch-lstm-scm-1.rockspec  train.lua  train_ae.lua  train_airwriting.lua  train_latent.lua  train_optical_flow.lua  train_var_ae.lua  visualize_weights_classify.ipynb
conv_lstm/torch/layer/: train_bootstrap.lua  train_bootstrap_var.lua  train_labelCorrection.lua  train_normal.lua  train_supervised_context.lua
conv_lstm/torch/model/: AirHandwritingConvLSTM.lua  BatchLSTM.lua  ConvLSTM.lua  DenseConvLSTM.lua  LSTMAutoEncoder.lua  LSTMVarAutoEncoder.lua  MS_BLSTM.lua  MS_BRNN.lua  MS_BootstrapCrossEntropy.lua  MS_Embedding.lua  MS_ReverseSequence.lua  MS_TemperatureSoftMax.lua  MultiScaleCNN.lua  MultiScaleConvBLSTM.lua  MultiScaleConvLSTM.lua  MultiScaleLatentConvLSTM.lua  MultiScaleSpatialConvLSTM.lua  MultiScaleSupervisedContextModel.lua  MyLSTM.lua  ReconsLayer.lua  Seq2SeqAE.lua  VanillaLSTM.lua  sample_blstm.lua  sample_dense_model.lua  sample_mask_zero.lua  sample_model.lua  sample_scale.lua  sample_scale_2.lua
conv_lstm/torch/util/: AirHandwritingDataLoader.lua  AutoEncoderDataLoader.lua  BatchLoader.lua  DataLoader.lua  DenseSlidingWindowDataLoader.lua  KFoldSlidingWindowDataLoader.lua  LatentVariableDataLoader.lua  MultiScaleSpatialDataLoader.lua  SlidingWindowDataLoader.lua  utils.lua
crf/: MS_convertOneHotToNormal.m  MS_convertToFiveClass.m  MS_getConfMatrix.m  MS_runCRF.m  MS_runOnZFaceCSV.m  MS_runOnZFaceMAT.m  MS_save_individual_gesture_sequences.m  README.md
crf/HCRF2.0b/apps/matHCRF/: CMakeCache.txt  CMakeLists.txt  Makefile  ReadMe.txt  cmake_install.cmake  matHCRF.mexa64  matHCRF.vcproj
crf/HCRF2.0b/apps/matHCRF/hCRF/: Makefile  cmake_install.cmake
crf/HCRF2.0b/apps/matHCRF/hCRF/cgdescent/: Makefile  cmake_install.cmake
crf/HCRF2.0b/apps/matHCRF/hCRF/lbfgs/: Makefile  cmake_install.cmake
crf/HCRF2.0b/apps/matHCRF/hCRF/uncOptim/: Makefile  cmake_install.cmake
crf/HCRF2.0b/apps/matHCRF/src/: matHCRF.cpp
crf/HCRF2.0b/apps/swig/PyHCRF/: CMakeCache.txt  CMakeLists.txt  Makefile  PyHCRF.i  PyHCRF.py  PyHCRFPYTHON_wrap.cxx  cmake_install.cmake
crf/HCRF2.0b/apps/swig/PyHCRF/hCRF/: Makefile  cmake_install.cmake
crf/HCRF2.0b/apps/swig/PyHCRF/hCRF/cgdescent/: Makefile  cmake_install.cmake
crf/HCRF2.0b/apps/swig/PyHCRF/hCRF/lbfgs/: Makefile  cmake_install.cmake
crf/HCRF2.0b/apps/swig/PyHCRF/hCRF/uncOptim/: Makefile  cmake_install.cmake
crf/HCRF2.0b/apps/testHCRF/: CMakeCache.txt  Makefile  cmake_install.cmake  hcrfTest
crf/HCRF2.0b/apps/testHCRF/hCRF/: Makefile  cmake_install.cmake
crf/HCRF2.0b/apps/testHCRF/hCRF/cgdescent/: Makefile  cmake_install.cmake
crf/HCRF2.0b/apps/testHCRF/hCRF/lbfgs/: Makefile  cmake_install.cmake
crf/HCRF2.0b/apps/testHCRF/hCRF/uncOptim/: Makefile  (+1 more)
crf/HCRF2.0b/docs/: coding_styles.txt  log.txt
crf/HCRF2.0b/libs/shared/hCRF/: CMakeCache.txt  CMakeLists.txt  Makefile  ReadMe.txt  cmake_install.cmake
crf/HCRF2.0b/libs/shared/hCRF/cgdescent/: Makefile  cmake_install.cmake
crf/HCRF2.0b/libs/shared/hCRF/include/: EdgeFeatures.h  EdgeObservationFeatures.h  FeaturesOne.h  LabelEdgeFeatures.h  MyFeatures.h  MyToolbox.h  RawFeatures.h  RawFeaturesSquare.h  WindowRawFeatures.h  dataset.h  evaluator.h  featuregenerator.h  gradient.h  hCRF.h  hcrfExcep.h  inferenceengine.h  matrix.h  model.h  optimizer.h  toolbox.h
crf/HCRF2.0b/libs/shared/hCRF/lbfgs/: Makefile  cmake_install.cmake
crf/HCRF2.0b/libs/shared/hCRF/src/: Dummys.cpp  EdgeFeatures.cpp  EdgeObservationFeatures.cpp  FeaturesOne.cpp  GradientCRF.cpp  GradientFD.cpp  GradientHCRF.cpp  GradientLDCRF.cpp  InferenceEngine.cpp  InferenceEngineBrute.cpp  InferenceEngineFB.cpp  LabelEdgeFeatures.cpp  MyFeatures.cpp  MyToolbox.cpp  OptimizerCG.cpp  OptimizerLBFGS.cpp  OptimizerUncOptim.cpp  RawFeatures.cpp  RawFeaturesSquare.cpp  SharedFeatures.cpp  ToolboxCRF.cpp  ToolboxGHCRF.cpp  ToolboxHCRF.cpp  ToolboxLDCRF.cpp  WindowRawFeatures.cpp  dataset.cpp  evaluator.cpp  evaluatorCRF.cpp  evaluatorHCRF.cpp  evaluatorLDCRF.cpp  featuregenerator.cpp  gradient.cpp  matrix.cpp  matrix.inl  matrixSSE2.cpp  model.cpp  optimizer.cpp  toolbox.cpp
crf/HCRF2.0b/libs/shared/hCRF/uncOptim/: Makefile  cmake_install.cmake
crf/HCRF2.0b/samples/matlab/: CreateROC.m  cellInt32.m  plotResults.m  runSampleExperiment.m  sampleData.mat  test.m  testCRF.m  testHCRF.m  testLDCRF.m  train.m  trainCRF.m  trainHCRF.m  trainLDCRF.m
utils/: calc_mean_std.py  checkpoint_87_pp.json  convert_all_classif_json_to_h5.py  convert_classif_json_to_h5.py  convert_cpm_json_to_h5.py  correct_gesture.csv.bak  correct_gesture_38.csv  correct_gesture_ict.csv  create_cardiff_dataset.py  create_easy_gestures.py  data_augmentation_generator.py  data_utils.py  dataset_stats.py  dense_optical_flow.py  extract_gesture.py  gesture_display.py  incorrect_gesture.csv  incorrect_gesture_38.csv  incorrect_gesture_ict.csv  max_window_len.py  most_informative_joints.py  openface_to_h5.py  plot_all_results.py  plot_all_user_conf_mat.ipynb  plot_conf.ipynb  plot_conf_mat.py  plot_easy_gestures.ipynb  plot_gest_stats.ipynb  plot_loss_acc.py  plot_per_user_conf_mat.ipynb  plot_roc_curve.ipynb  plot_sequence.py  plot_sequence_predictions.py  plot_train_test_data_stats.py  pretty_print_torch_json.py  print_conf_stats.py  print_per_user_conf_mat.py  random_plots.ipynb  run_conv_pose_machines.sh  sliding_window.py  (+14 more)
utils/matlab/: create_crf_sequence.py  display_all_gesture_sequences.m  display_gesture_sequences.m  read_gest_seq.m
zface_utils/: convert_filtered_pose_to_h5.py
